# manager

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  UI_STYLE_GUIDE.md  deploy.sh  dev.sh  docker-compose.standalone.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
.claude/: settings.json
.claude/hooks/: deny-env-bash.py
.github/: release.yml
.github/workflows/: auto-label.yml  build-appliance.yml  ci.yml  deploy-website.yml  dev-hardware.yml  dev-host-deploy.yml  dev-host-drift.yml  dev-sso.yml  install-smoke.yml  release.yml
appliance/packer/: sixtyops.pkr.hcl  tachyon.pkr.hcl
appliance/scripts/: create-ova.py
docs/: api.md  architecture.md  deployment.md  dev-hardware-validation.md  gradual-rollout.md  migration-recovery.md  north-star.md  oidc-setup.md  post-deploy-checklist.md  quickstart.md  radius-secret-rotation-reminder.md  radius.md  release-sop.md  release-system.md  repo-hardening.md  self-update-signing.md  troubleshooting.md  ui-components.md  ui-guidelines.md  ui-principles.md
nginx/: entrypoint.sh
nginx/conf.d/: default.conf
scripts/: cleanup_orphaned_device_data.py  generate-self-signed.sh  install.sh  seed_dev_data.py  validate_release.py
static/: common.css  fonts.css  monitor.css  setup_pages.css
static/js/: monitor.js  topology.js
tests/: conftest.py  test_analytics.py  test_api.py  test_audit_tokens.py  test_auth.py  test_bandwidth.py  test_compose_config.py  test_config_enforce.py  test_config_push.py  test_config_recycle_bin.py  test_cpe_auth_status.py  test_create_ova.py  test_database.py  test_device_groups.py  test_device_notes_bulk.py  test_edge_cases.py  test_email_notifier.py  test_features.py  test_firmware_fetcher.py  test_firmware_model_validation.py  test_firmware_policy.py  test_firmware_target.py  test_freeze_windows.py  test_license.py  test_link_budget.py  test_manual_update.py  test_migration_failures.py  test_models.py  test_oidc.py  test_openapi.py  test_radius.py  test_rain_zones.py  test_rbac.py  test_release_checker.py  test_reporting.py  test_resilience.py  test_rollout_invariants.py  test_scaling.py  test_scheduler.py  test_scheduler_next_attempt.py  (+18 more)
tests/integration/: conftest.py  (+13 more)
updater/: __init__.py  app.py  auth.py  backup.py  builtin_radius.py  config_utils.py  crypto.py  database.py  devmode.py  discovery.py  email_notifier.py  features.py  firmware_fetcher.py  firmware_policy.py  firmware_target.py  git_backup.py  license.py  link_budget.py  models.py  oidc_config.py  poller.py  radius_config.py  radius_rollout.py  radius_server.py  radius_users.py  rain_zones.py  release_checker.py  rollout_gate.py  scheduler.py  services.py  sftp_backup.py  slack.py  snmp.py  ssl_manager.py  syslog_forwarder.py  tachyon.py  telemetry.py  version_utils.py  webhooks.py
website/: 404.html  DEPLOY.md  billing.html  index.html  infra.yml  privacy.html  terms.html
(+38 files in other folders)
